# CSC418

Assignment 3/: CHECKLIST.txt  CMakeLists.txt  REPORT.txt
Assignment 3/Part A/raytracer/: Makefile  light_source.cpp  light_source.h  main.cpp  raytracer  raytracer.cpp  scene_object.cpp
Assignment 3/Part B/: main.cpp
Assignment 3/Part B/raytracer/: CMakeLists.txt  Discussion board tips  Makefile  REPORT.txt  experiments.cpp  experiments.h  gmon.out  light_source.cpp  light_source.h  main.cpp  raytracer  raytracer.cpp  raytracer.h  scene_object.cpp  scene_object.h  scenes.cpp  scenes.h  util.cpp  util.h
Assignment 3/raytracer/: REPORT.txt  gmon.out  light_source.cpp  raytracer  raytracer.cpp  raytracer.h  scene_object.cpp
